fix sidebar overflow, dashboard padding

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -17,6 +17,7 @@
 
 .sidebar {
   padding-top: 12px;
+  width: 250px;
   .links {
     a {
       color: $lighterGrey;
