--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -124,7 +124,7 @@ button {
 }
 
 .page-container {
-  padding: 12px;
+  padding: 15px;
   overflow-y: auto;
   overflow-x: hidden;
   height: 100vh;
@@ -225,7 +225,7 @@ button {
 }
 
 .dashboard-stats {
-  margin: 10px 0px 40px 5px;
+  margin: 10px 0 40px 0;
   padding: 10px 10px 10px 10px;
   border: 2px solid $lighterGrey;
   border-radius: 3px;
